# medi-order

./: .env.example  .gitignore  README.md  Taskfile.yml  docker-compose.yml  get-signature.ps1  latest.json  package.json  prepare-release.ps1
apps/web/: .env.example  README.md  index.html  package.json  vitest.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/crates/config/: Cargo.toml
apps/web/src-tauri/crates/config/src/: error.rs  lib.rs
apps/web/src-tauri/crates/config/src/cli_tui/: handlers.rs  mod.rs  state.rs  ui.rs
apps/web/src-tauri/crates/config/src/cli_tui/components/: config_view.rs  confirm_dialog.rs  database_editor.rs  export_dialog.rs  footer.rs  header.rs  import_dialog.rs  jwt_editor.rs  main_menu.rs  mod.rs
apps/web/src-tauri/crates/config/src/crypto/: mod.rs
apps/web/src-tauri/crates/config/src/database/: mod.rs
apps/web/src-tauri/crates/config/src/storage/: mod.rs
apps/web/src-tauri/crates/seeder/: Cargo.toml  README.md
apps/web/src-tauri/crates/seeder/data/: roles.json
apps/web/src-tauri/crates/seeder/examples/: seed_db.rs  seed_selective.rs
apps/web/src-tauri/crates/seeder/src/: error.rs  inventory.rs  lib.rs  main.rs  manufacturers.rs  medicine_forms.rs  roles.rs  suppliers.rs
apps/web/src-tauri/crates/seeder/src/tui/: mod.rs  state.rs
apps/web/src-tauri/crates/seeder/src/tui/components/: completion_view.rs  dashboard.rs  footer.rs  header.rs  logs_panel.rs  mod.rs  seeding_progress.rs  sidebar.rs
apps/web/src-tauri/db/: IMPLEMENTATION_ORDER.md
apps/web/src-tauri/db/migration/: Cargo.toml  QUICK_START.md  README.md
apps/web/src-tauri/db/migration/src/: lib.rs  m20250130_000001_create_enums.rs  m20250130_000002_create_staff_table.rs  m20250130_000003_create_roles_table.rs  m20250130_000004_create_users_table.rs  m20250130_000005_create_indexes.rs  m20250131_000001_6_create_medicine_forms_table.rs  m20250131_000001_create_customers_table.rs  m20250131_000002_create_inventory_items_table.rs  m20250131_000003_create_suppliers_table.rs  m20250131_000004_create_special_orders_table.rs  m20250131_000005_create_special_order_items_table.rs  m20250131_000006_create_supplier_inventory_items_table.rs  m20250131_000007_create_settings_table.rs  m20250131_000008_create_sessions_table.rs  m20250201_000001_create_inventory_stock_history_table.rs  main.rs
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/api/: inventory.api.ts  manufacturer.api.ts  onboarding.api.ts  opening-balance.api.ts  session.api.ts  settings.api.ts  user.api.ts
apps/web/src/components/: app-sidebar.tsx  confirmation-dialog.tsx  index.ts  language-switcher.tsx  manual-update-check.tsx  mode-toggle.tsx  page-header.tsx  splash-screen.tsx  stats-grid.tsx
apps/web/src/contexts/: auth-context.tsx
apps/web/src/hooks/: index.ts  use-app-updater.ts  use-auth.ts  use-auto-archive.ts  use-inventory.ts  use-manufacturers.ts  use-notifications.ts  use-onboarding-db.ts  use-opening-balances.ts  use-order-alerts.ts  use-orders-db.ts  use-orders.ts  use-seed-data.ts  use-settings-db.ts  use-settings.ts  use-suppliers-db.ts  use-suppliers.ts
apps/web/src/lib/: auth.ts  constants.ts  db-collections.ts  db-queries.ts  db.ts  error-handler.ts  logger.ts  performance.ts  query-client.ts  rtl-config.ts  seed-data.ts  settings-definitions.ts  types-settings.ts  types.ts  validation.ts
apps/web/src/providers/: index.ts  (+2 more)
docker/: README.md
docker/pgadmin/: servers.json
docker/postgres/: postgresql.conf  seed-admin.sql
docs/: ITEM_INQUIRY_IMPLEMENTATION.md
(+165 files in other folders)
