[package]
name = "app_config"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
derive-getters = { workspace = true }
dialoguer = "0.12.0"
dirs = "6.0.0"
hostname = { workspace = true }
reratui = "1.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
