[package]
name = "app_seeder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seeder"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v7"] }

# TUI dependencies
dialoguer = "0.12.0"
dirs = "6.0.0"
reratui = "1.1.0"

app_config = { workspace = true }
db_entity = { workspace = true }
db_service = { workspace = true }
