[package]
name = "db_migration"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "cli",
] }
tokio = { workspace = true, features = ["full"] }

[lib]
name = "db_migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"
